Fix: invoice Fee representation, now in invoice can see current week fee and previous week fee balance